<resources>

    <!--<string name="app_name">RoomMate</string>-->

    <!-- TODO: Remove or change this placeholder text -->
    <!-- <string name="hello_blank_fragment">Hello blank fragment</string>-->

    <string name="app_name">RoomMate</string>
    <string name="roomMate">RoomMate</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="passwordhint">Password</string>
    <string name="login">Login</string>
    <string name="join_us">Join Us</string>
    <string name="fullname">Full Name</string>
    <string name="fill_name">Fill Name</string>
    <string name="confirm_e_mail">Confirm E-Mail</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">SignUp</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="let_us_know_you_better">Let Us Know You Better</string>
    <string name="birth_date">Birth Date</string>
    <string name="full_name">Full Name</string>
    <string name="weigh">Weigh</string>
    <string name="height">Height</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="save_event">Save Event</string>
    <string name="register">Register</string>
    <string name="m">M</string>
    <string name="f">F</string>

</resources>
