<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:background="@color/colorGray"
    android:layoutDirection="ltr">

    <TextView
        android:id="@+id/dateId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:text="@string/date"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/eventDescription"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:hint="@string/description"
        android:textColorHint="@color/colorWhite"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textSize="14sp" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:background="@color/fui_transparent"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/save_event" />


</RelativeLayout>